# beldum_package_manager

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  cdm_packages.json  installed_packages.json  main  main.cpp  makefile  package.json
documentation/: documentation.md
src/: beldum_clean.cpp  beldum_init.cpp  beldum_install.cpp  beldum_list.cpp  beldum_logging.cpp  beldum_uninstall.cpp  global_utilities.cpp  json_parser.cpp  main.cpp  mysql_connection.cpp  package_manager.cpp
src/commands/: beldum_clean.cpp  beldum_init.cpp  beldum_install.cpp  beldum_list.cpp  beldum_run.cpp  beldum_setup.cpp  beldum_uninstall.cpp
src/core/: global_utilities.cpp  package_manager.cpp
src/database/: available_packages.json  cpp-dotenv.json  cpp_webserver.json  cpr.json  fmt.json  mysql.json  nlohmann_json.json  open_xlsx.json  pico-sdk.json  spdlog.json  stevensMapLib.json  stevensStringLib.json  stevensVectorLib.json
src/header_files/: beldum_clean.hpp  beldum_init.hpp  beldum_install.hpp  beldum_list.hpp  beldum_logging.hpp  beldum_run.hpp  beldum_setup.hpp  beldum_uninstall.hpp  global_utilities.hpp  package_manager.hpp
src/headerfiles/: beldum_init.hpp  beldum_install.hpp  beldum_list.hpp  beldum_logging.hpp  beldum_uninstall.hpp  json_parser.hpp  msql_connection.hpp  package_manager.hpp
src/logging/: beldum_logging.cpp
